# x6100_gui

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: main.yml
src/: CMakeLists.txt  adif.c  audio.c  audio.h  backlight.c  band_info.c  bands.c  buttons.c  buttons.cpp  buttons.h  cat.c  cat.cpp  controls.cpp  controls.h  cw.cpp  cw.h  cw_decoder.c  cw_encoder.c  dialog.c  dialog.h  dialog_ft8.c  dialog_msg_voice.c  dialog_recorder.c  dialog_settings.c  dialog_settings.cpp  dialog_wifi.c  dsp.cpp  dsp.h  encoder.c  encoder.h  events.c  events.h  keypad.c  knobs.c  knobs.cpp  knobs.h  main.c  main.h  main_screen.c  meter.c  (+40 more)
src/cfg/: CMakeLists.txt  atu.c  band.c  cfg.c  cfg.h  cfg.private.h  common.h  mode.c  mode.cpp  mode.h  mode.private.h  params.c  params.private.h  subjects.cpp  subjects.h
src/fonts/: sony_38.c
src/ft8/: CMakeLists.txt  audio_worker.c  audio_worker.h  auto_dnf.c  auto_dnf.h  auto_sel.cpp  auto_sel.h  cq_scheduler.c  cq_scheduler.h  ft8_hooks.h  ft8_log.c  ft8_log.h  gfsk.c  params.c  params.h  qso.cpp  qso.h  qso_state.c  qso_state.h  table_view.c  table_view.h  tx_worker.c  tx_worker.h  worker.c  worker.h
src/params/: params.c  params.h
src/widgets/: lv_waterfall.c  lv_waterfall.h
